// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportShipToPDF — snapshot > produces a stable sequence of PDF text calls for a standard ship 1`] = `
[
  {
    "text": "Snapshot Frigate",
    "x": 105,
  },
  {
    "text": "Light Class – Frigate",
    "x": 105,
  },
  {
    "text": "GAME NOTES",
    "x": 12,
  },
  {
    "text": "Snapshot Frigate — Systems",
    "x": 105,
  },
  {
    "text": "SHIP OVERVIEW",
    "x": 14,
  },
  {
    "text": "Hull Points:",
    "x": 12,
  },
  {
    "text": "5 / 20 (15 free)",
    "x": 32,
  },
  {
    "text": "Power:",
    "x": 84,
  },
  {
    "text": "0 generated, 5 consumed",
    "x": 104,
  },
  {
    "text": "Cost:",
    "x": 146,
  },
  {
    "text": "$6.1 M",
    "x": 166,
  },
  {
    "text": "Crew:",
    "x": 12,
  },
  {
    "text": "15",
    "x": 32,
  },
  {
    "text": "Toughness:",
    "x": 12,
  },
  {
    "text": "Light",
    "x": 32,
  },
  {
    "text": "Target Modifier:",
    "x": 84,
  },
  {
    "text": "+1",
    "x": 104,
  },
  {
    "text": "Armor:",
    "x": 12,
  },
  {
    "text": "Light Ceramic",
    "x": 32,
  },
  {
    "text": "SYSTEMS SUMMARY",
    "x": 14,
  },
  {
    "text": "System",
    "x": 12,
  },
  {
    "text": "Hull Points",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Hull",
    "x": 12,
  },
  {
    "text": "20",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "$5 M",
    "x": 142,
  },
  {
    "text": "Armor",
    "x": 12,
  },
  {
    "text": "-",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Power Plants",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "+0",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Support Systems",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Weapons",
    "x": 12,
  },
  {
    "text": "2",
    "x": 77,
  },
  {
    "text": "2",
    "x": 107,
  },
  {
    "text": "$500 K",
    "x": 142,
  },
  {
    "text": "Defenses",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$200 K",
    "x": 142,
  },
  {
    "text": "Command & Control",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$300 K",
    "x": 142,
  },
  {
    "text": "Sensors",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$100 K",
    "x": 142,
  },
  {
    "text": "Hangar & Misc",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "TOTAL",
    "x": 12,
  },
  {
    "text": "5 / 20",
    "x": 77,
  },
  {
    "text": "-5",
    "x": 107,
  },
  {
    "text": "$6.1 M",
    "x": 142,
  },
  {
    "text": "COMBAT SHEET",
    "x": 14,
  },
  {
    "text": "SENSORS",
    "x": 12,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Range S/M/L",
    "x": 48,
  },
  {
    "text": "Arcs",
    "x": 74,
  },
  {
    "text": "Control",
    "x": 100,
  },
  {
    "text": "Accuracy",
    "x": 114,
  },
  {
    "text": "Tracking",
    "x": 134,
  },
  {
    "text": "Qty",
    "x": 160,
  },
  {
    "text": "Active Radar",
    "x": 12,
  },
  {
    "text": "5/15/40",
    "x": 48,
  },
  {
    "text": "F",
    "x": 74,
  },
  {
    "text": "-",
    "x": 100,
  },
  {
    "text": "+0",
    "x": 114,
  },
  {
    "text": "2",
    "x": 134,
  },
  {
    "text": "1",
    "x": 160,
  },
  {
    "text": "WEAPONS",
    "x": 12,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Range S/M/L",
    "x": 48,
  },
  {
    "text": "Arcs",
    "x": 74,
  },
  {
    "text": "FC",
    "x": 100,
  },
  {
    "text": "Accuracy",
    "x": 114,
  },
  {
    "text": "Type/FP",
    "x": 130,
  },
  {
    "text": "Damage",
    "x": 146,
  },
  {
    "text": "Qty",
    "x": 182,
  },
  {
    "text": "Single Laser Cannon",
    "x": 12,
  },
  {
    "text": "3/10/30",
    "x": 48,
  },
  {
    "text": "F",
    "x": 74,
  },
  {
    "text": "-",
    "x": 100,
  },
  {
    "text": "+0",
    "x": 114,
  },
  {
    "text": "En/L",
    "x": 130,
  },
  {
    "text": "d8w",
    "x": 146,
  },
  {
    "text": "1",
    "x": 182,
  },
  {
    "text": "DEFENSES",
    "x": 14,
  },
  {
    "text": "Toughness:",
    "x": 12,
  },
  {
    "text": "Light",
    "x": 32,
  },
  {
    "text": "Target Modifier:",
    "x": 72,
  },
  {
    "text": "+1",
    "x": 92,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Effect",
    "x": 72,
  },
  {
    "text": "Light Ceramic",
    "x": 12,
  },
  {
    "text": "LI: d4+1  |  HI: d4  |  En: d4-1",
    "x": 72,
  },
  {
    "text": "1× ECM Suite",
    "x": 12,
  },
  {
    "text": "+1 step penalty to enemy attacks",
    "x": 72,
  },
  {
    "text": "DAMAGE TRACK",
    "x": 12,
  },
  {
    "text": "Stun (5)",
    "x": 12,
  },
  {
    "text": "Wound (10)",
    "x": 110,
  },
  {
    "text": "Mortal (5)",
    "x": 12,
  },
  {
    "text": "Critical (5)",
    "x": 110,
  },
  {
    "text": "DAMAGE DIAGRAM",
    "x": 14,
  },
  {
    "text": "HIT LOCATION TABLE",
    "x": 12,
  },
  {
    "text": "d6",
    "x": 12,
  },
  {
    "text": "Forward",
    "x": 49.2,
  },
  {
    "text": "Port",
    "x": 86.4,
  },
  {
    "text": "Starboard",
    "x": 123.60000000000001,
  },
  {
    "text": "Aft",
    "x": 160.8,
  },
  {
    "text": "1-3",
    "x": 12,
  },
  {
    "text": "F",
    "x": 49.2,
  },
  {
    "text": "F",
    "x": 86.4,
  },
  {
    "text": "F",
    "x": 123.60000000000001,
  },
  {
    "text": "A",
    "x": 160.8,
  },
  {
    "text": "4-6",
    "x": 12,
  },
  {
    "text": "A",
    "x": 49.2,
  },
  {
    "text": "A",
    "x": 86.4,
  },
  {
    "text": "A",
    "x": 123.60000000000001,
  },
  {
    "text": "F",
    "x": 160.8,
  },
  {
    "text": "DAMAGE ZONES",
    "x": 12,
  },
  {
    "text": "F – Fore",
    "x": 76.5,
  },
  {
    "text": "2/10",
    "x": 133.5,
  },
  {
    "text": "1. Laser Cannon (2)",
    "x": 76.5,
  },
  {
    "text": "A – Aft",
    "x": 76.5,
  },
  {
    "text": "2/10",
    "x": 133.5,
  },
  {
    "text": "(empty)",
    "x": 76.5,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 1/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 2/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 3/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
]
`;

exports[`exportShipToPDF — snapshot > produces a stable snapshot with detailed systems enabled 1`] = `
[
  {
    "text": "Detailed Frigate",
    "x": 105,
  },
  {
    "text": "Light Class – Frigate",
    "x": 105,
  },
  {
    "text": "GAME NOTES",
    "x": 12,
  },
  {
    "text": "Detailed Frigate — Systems",
    "x": 105,
  },
  {
    "text": "SHIP OVERVIEW",
    "x": 14,
  },
  {
    "text": "Hull Points:",
    "x": 12,
  },
  {
    "text": "5 / 20 (15 free)",
    "x": 32,
  },
  {
    "text": "Power:",
    "x": 84,
  },
  {
    "text": "0 generated, 5 consumed",
    "x": 104,
  },
  {
    "text": "Cost:",
    "x": 146,
  },
  {
    "text": "$6.1 M",
    "x": 166,
  },
  {
    "text": "Crew:",
    "x": 12,
  },
  {
    "text": "15",
    "x": 32,
  },
  {
    "text": "Toughness:",
    "x": 12,
  },
  {
    "text": "Light",
    "x": 32,
  },
  {
    "text": "Target Modifier:",
    "x": 84,
  },
  {
    "text": "+1",
    "x": 104,
  },
  {
    "text": "Armor:",
    "x": 12,
  },
  {
    "text": "Light Ceramic",
    "x": 32,
  },
  {
    "text": "SYSTEMS SUMMARY",
    "x": 14,
  },
  {
    "text": "System",
    "x": 12,
  },
  {
    "text": "Hull Points",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Hull",
    "x": 12,
  },
  {
    "text": "20",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "$5 M",
    "x": 142,
  },
  {
    "text": "Armor",
    "x": 12,
  },
  {
    "text": "-",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Component",
    "x": 18,
  },
  {
    "text": "HP",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Light Ceramic",
    "x": 18,
  },
  {
    "text": "2",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "$20 K",
    "x": 142,
  },
  {
    "text": "Power Plants",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "+0",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Support Systems",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "Weapons",
    "x": 12,
  },
  {
    "text": "2",
    "x": 77,
  },
  {
    "text": "2",
    "x": 107,
  },
  {
    "text": "$500 K",
    "x": 142,
  },
  {
    "text": "Component",
    "x": 18,
  },
  {
    "text": "HP",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Laser Cannon",
    "x": 18,
  },
  {
    "text": "2",
    "x": 77,
  },
  {
    "text": "2",
    "x": 107,
  },
  {
    "text": "$500 K",
    "x": 142,
  },
  {
    "text": "Defenses",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$200 K",
    "x": 142,
  },
  {
    "text": "Component",
    "x": 18,
  },
  {
    "text": "HP",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "ECM Suite",
    "x": 18,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$200 K",
    "x": 142,
  },
  {
    "text": "Command & Control",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$300 K",
    "x": 142,
  },
  {
    "text": "Component",
    "x": 18,
  },
  {
    "text": "HP",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Computer Core",
    "x": 18,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$300 K",
    "x": 142,
  },
  {
    "text": "Sensors",
    "x": 12,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$100 K",
    "x": 142,
  },
  {
    "text": "Component",
    "x": 18,
  },
  {
    "text": "HP",
    "x": 77,
  },
  {
    "text": "Power",
    "x": 107,
  },
  {
    "text": "Cost",
    "x": 142,
  },
  {
    "text": "Active Radar",
    "x": 18,
  },
  {
    "text": "1",
    "x": 77,
  },
  {
    "text": "1",
    "x": 107,
  },
  {
    "text": "$100 K",
    "x": 142,
  },
  {
    "text": "Hangar & Misc",
    "x": 12,
  },
  {
    "text": "0",
    "x": 77,
  },
  {
    "text": "-",
    "x": 107,
  },
  {
    "text": "-",
    "x": 142,
  },
  {
    "text": "TOTAL",
    "x": 12,
  },
  {
    "text": "5 / 20",
    "x": 77,
  },
  {
    "text": "-5",
    "x": 107,
  },
  {
    "text": "$6.1 M",
    "x": 142,
  },
  {
    "text": "COMBAT SHEET",
    "x": 14,
  },
  {
    "text": "SENSORS",
    "x": 12,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Range S/M/L",
    "x": 48,
  },
  {
    "text": "Arcs",
    "x": 74,
  },
  {
    "text": "Control",
    "x": 100,
  },
  {
    "text": "Accuracy",
    "x": 114,
  },
  {
    "text": "Tracking",
    "x": 134,
  },
  {
    "text": "Qty",
    "x": 160,
  },
  {
    "text": "Active Radar",
    "x": 12,
  },
  {
    "text": "5/15/40",
    "x": 48,
  },
  {
    "text": "F",
    "x": 74,
  },
  {
    "text": "-",
    "x": 100,
  },
  {
    "text": "+0",
    "x": 114,
  },
  {
    "text": "2",
    "x": 134,
  },
  {
    "text": "1",
    "x": 160,
  },
  {
    "text": "WEAPONS",
    "x": 12,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Range S/M/L",
    "x": 48,
  },
  {
    "text": "Arcs",
    "x": 74,
  },
  {
    "text": "FC",
    "x": 100,
  },
  {
    "text": "Accuracy",
    "x": 114,
  },
  {
    "text": "Type/FP",
    "x": 130,
  },
  {
    "text": "Damage",
    "x": 146,
  },
  {
    "text": "Qty",
    "x": 182,
  },
  {
    "text": "Single Laser Cannon",
    "x": 12,
  },
  {
    "text": "3/10/30",
    "x": 48,
  },
  {
    "text": "F",
    "x": 74,
  },
  {
    "text": "-",
    "x": 100,
  },
  {
    "text": "+0",
    "x": 114,
  },
  {
    "text": "En/L",
    "x": 130,
  },
  {
    "text": "d8w",
    "x": 146,
  },
  {
    "text": "1",
    "x": 182,
  },
  {
    "text": "DEFENSES",
    "x": 14,
  },
  {
    "text": "Toughness:",
    "x": 12,
  },
  {
    "text": "Light",
    "x": 32,
  },
  {
    "text": "Target Modifier:",
    "x": 72,
  },
  {
    "text": "+1",
    "x": 92,
  },
  {
    "text": "Name",
    "x": 12,
  },
  {
    "text": "Effect",
    "x": 72,
  },
  {
    "text": "Light Ceramic",
    "x": 12,
  },
  {
    "text": "LI: d4+1  |  HI: d4  |  En: d4-1",
    "x": 72,
  },
  {
    "text": "1× ECM Suite",
    "x": 12,
  },
  {
    "text": "+1 step penalty to enemy attacks",
    "x": 72,
  },
  {
    "text": "DAMAGE TRACK",
    "x": 12,
  },
  {
    "text": "Stun (5)",
    "x": 12,
  },
  {
    "text": "Wound (10)",
    "x": 110,
  },
  {
    "text": "Mortal (5)",
    "x": 12,
  },
  {
    "text": "Critical (5)",
    "x": 110,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 1/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 2/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
  {
    "text": "Alternity Warship Generator",
    "x": 12,
  },
  {
    "text": "Page 3/3",
    "x": 105,
  },
  {
    "text": "3/8/2026",
    "x": 198,
  },
]
`;
